--- a/views/personal.html
+++ b/views/personal.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 </head>
-
 <body>
-	<div class="container">
+    <div class="container">
 		<!-- 导航条 -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">190110910309 郭佳俊 19计算机2班</a>
@@ -26,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     
-                    <li class="nav-item dropdown"><a id="loginname" name="loginname" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <li class="nav-item dropdown"><a id="loginname" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"><%=longinname%></a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="Allusers">Search all</a>
@@ -46,8 +43,8 @@
             <div class="col-lg-3">
 
                 <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action">首页</a>
-                    <a href="/personal?username=<%=longinname%>" class="list-group-item list-group-item-action">个人信息</a>
+                    <a href="/frontpage?username=<%=longinname%>" class="list-group-item list-group-item-action">首页</a>
+                    <a href="#" class="list-group-item list-group-item-action">个人信息</a>
                     <a href="/employee?username=<%=longinname%>" class="list-group-item list-group-item-action">求职请求</a>
                     <a href="/change_pass?username=<%=longinname%>" class="list-group-item list-group-item-action">修改密码</a>
                     <a class="list-group-item list-group-item-action" href="index.html">退出登录</a>
@@ -61,21 +58,8 @@
 					<h1 class="display-4">登录成功</h1>
 					<p class="lead">欢迎您!!!</p>
 					<hr class="my-4">
-					<p class="lead">可以点击左侧菜单进行下单操作</p>
-					<div class="row">
-						<div class="col-lg-5">
-							<img alt="" src="photo/front1.png">
-						</div>
-						<div class="col-lg-5">
-							<img alt="" src="photo/front2.png">
-						</div>
-						<div class="col-lg-5">
-							<img alt="" src="photo/front3.png">
-						</div>
-						<div class="col-lg-5">
-							<img alt="" src="photo/front4.png">
-						</div>
-					</div>
+					<p class="lead">可以点击左侧菜单进行操作</p>
+
 				</div>
 
 
@@ -86,7 +70,5 @@
 		</div>
 
 	</div>
-
-
 </body>
 </html>
