commit 4 :finish personal infomation part

--- a/views/personal.html
+++ b/views/personal.html
@@ -54,13 +54,21 @@
 
 			<div class="col-lg-6">
 
-				<div class="jumbotron">
-					<h1 class="display-4">登录成功</h1>
-					<p class="lead">欢迎您!!!</p>
-					<hr class="my-4">
-					<p class="lead">可以点击左侧菜单进行操作</p>
+				<form method="post">
+                    <div class="form-group row" style="margin-left:2px">
+                        <label for="inputEmail3" class="col-sm-20 col-form-label">用户名:<%=longinname%></label>
+                    </div>
+                    <div class="form-group row" style="margin-left:2px">
+                        <label for="inputPassword3" class="col-sm-20 col-form-label">账户:<%=account%></label>
+                    </div>
+                    <div class="form-group row" style="margin-left:2px">
+                        <label for="inputEmail3" class="col-sm-20 col-form-label">年龄:<%=age%></label>
+                    </div>
+                    <div class="form-group row" style="margin-left:2px">
+                        <label for="inputEmail3" class="col-sm-20 col-form-label">性别：<%=gender%></label>
+                    </div>
 
-				</div>
+                </form>
 
 
 			</div>
