--- a/views/change_pass.html
+++ b/views/change_pass.html
@@ -46,7 +46,7 @@
                 <div class="list-group">
                     <a href="/frontpage?username=<%=longinname%>" class="list-group-item list-group-item-action">首页</a>
                     <a href="/personal?username=<%=longinname%>" class="list-group-item list-group-item-action">个人信息</a>
-                    <a href="/employee?username=<%=longinname%>" class="list-group-item list-group-item-action">求职请求</a>
+                    <a href="/employee?username=<%=longinname%>" class="list-group-item list-group-item-action">疫苗预约</a>
                     <a href="#" class="list-group-item list-group-item-action">修改密码</a>
                     <a class="list-group-item list-group-item-action" href="index.html">退出登录</a>
                 </div>
